[gd_scene load_steps=7 format=2]

[ext_resource path="res://RESOURCES/SkillBorders/Border3.png" type="Texture" id=1]
[ext_resource path="res://RESOURCES/SkillIcons/BlackSquare.png" type="Texture" id=2]
[ext_resource path="res://RESOURCES/Font/BMYEONSUNG.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://RESOURCES/SkillIcons/Lock.png" type="Texture" id=4]
[ext_resource path="res://UI/Screens/Combat/Bottom/SkillIcon.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 3 )

[node name="SkillIcon" type="TextureRect"]
margin_left = 10.0
margin_right = 170.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 0 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 5 )

[node name="CooldownValue" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 96.0
margin_right = 29.0
margin_bottom = 26.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 1 )
text = "13.3"
align = 2
valign = 1

[node name="SkillIcon" type="TextureButton" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownTexture" type="TextureProgress" parent="."]
modulate = Color( 0.145098, 0.145098, 0.145098, 0.72549 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
texture_progress = ExtResource( 2 )
fill_mode = 5
nine_patch_stretch = true

[connection signal="pressed" from="SkillIcon" to="." method="_on_SkillIcon_pressed"]
